--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="brand">KayPeeCodes</div>
-        <div><a class="top_icon" href="https://adarshbalikasite.netlify.app/"><i class="fa fa-briefcase" aria-hidden="true"></i></a></div>
+        <div><a target="_blank" class="top_icon" href="https://kavita-pathak-portfolio.netlify.app/"><i class="fa fa-briefcase" aria-hidden="true"></i></a></div>
     </nav>
     <h1>Stocks Calculator</h1>
     <h2>Check Profit/Loss on your stocks</h2>
@@ -45,6 +45,10 @@
             <li class="">
                 <a class="" target="_blank" href="https://linkedin.com/in/kavita-pathak03"><i
                         class="fab fa-linkedin-in"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://twitter.com/KavitaP_03"><i
+                    class="fab fa-twitter"></i></a>
             </li>
         </ul>
     </footer>
