--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <h2>Check Profit/Loss on your stocks</h2>
 
     <main>
-        <label for="">
+        <label class="input-style" for="">
         <input type="number" id="initial-price" placeholder="Enter Initial Price Here"/>
     </label>
 
-    <label for="">
+    <label class="input-style" for="">
         <input type="number" id="stocks-quantity" placeholder="Enter the number of stocks bought"/>
     </label>
 
-    <label for="">
+    <label class="input-style" for="">
         <input type="number" id="current-price" placeholder="Enter the current price of the stocks">
     </label>
 
